[package]
name = 'mdict_index'
version = '0.1.0'
description = 'Library to lookup Octopus MDict Dictionary based on patricia tree or sqlite'
authors = ['韩朴宇 <w12101111@gmail.com>']
edition = '2018'
license = 'GPL-3.0-or-later'
build = 'build.rs'
keywords = [
    'dictionary',
    'mdict',
    'mdx',
    'mdd',
]

[features]
async = [
    'tokio',
    'async-trait',
    'mdict/async',
]
sqlite = [
    'async',
    'sqlx',
]

[dependencies]
encoding_rs = '0.8'
bytes = '0.5'
log = '0.4'
patricia_tree = '0.8'
tokio = { version = "1.36.0", features = ["full"], optional = true }
tokio-stream = { version = "0.1" }
either = "1.6"

[dependencies.mdict]
path = '../mdict'

[dependencies.async-trait]
version = '0.1'
optional = true

[dependencies.sqlx]
version = '0.7'
optional = true
default-features = false
features = [
    'runtime-tokio',
    'macros',
    'sqlite',
]
